# ALLG-ImageGen

./: algs_info_to_csv.py  gen.py  pyproject.toml  testing.py
cubevis/: 5x5coords.json  __init__.py  cli.py  colorizer.py  cube.py  fto.npy
cubevis/colorizer/: __init__.py  colorizer.py  fivebyfive.py  fto.py  megaminx.py  pyraminx.py  skewb.py  sq1.py  threebythree.py  twobytwo.py  utils.py
cubevis/scripts/: algs_info_to_csv.py  bin_search_dupes.py  combine_scrambles.py  convert_obl_doc.py  create_blind_base_sheet.py  create_sq1_coords.py  extract_pyraminx_algs.py  fix_single_case.py  full_pipeline.py  gen.py  get_jsons.py  images.py  jsons.py  karn_interactive.py  karnotation.py  list_obls.py  make_xlsx_from_scrambles.py
cubevis/scripts/diverse/: create_blind_base_sheet.py  create_megaminx_zbls_col.py  data_conversion.py  extract_pyraminx_algs.py  get_lbt_algs.py  zbls-vis.py
cubevis/scripts/diverse/sq1/: convert_obl_doc.py  create_sq1_coords.py  karn_interactive.py  karnotation.py
cubevis/scripts/templates/: algsinfo.js.jinja  alsginfo.js.jinja  index.html.jinja
cubevis/solver/: __init__.py  run_worker.js  solver.py  worker.js
