[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cubevis"
authors = [{name = "Malte Ihlefeld"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pandas",
    "scipy",
    "typer"
]
[project.scripts]
allg-gen = "cubevis.cli:app"